--- a/style/style.scss
+++ b/style/style.scss
@@ -5,9 +5,10 @@ section.test{
     font-weight: 900;
     font-size: 2.5rem;
   }
-  p{
+  p.a{
     color: darkgreen;
     font-size: 1.5rem;
     font-style: oblique;
   }
+  
 }
