--- a/style/style.scss
+++ b/style/style.scss
@@ -10,5 +10,8 @@ section.test{
     font-size: 1.5rem;
     font-style: oblique;
   }
-  
+  p.b{
+    color: darkmagenta;
+    font-size: 1.5rem;
+  }
 }
