--- a/style/style.css
+++ b/style/style.css
@@ -18,4 +18,10 @@ section.test p.b {
   color: darkmagenta;
   font-size: 1.5rem;
 }
+
+section.test p.c {
+  color: darkorange;
+  font-size: 1.5rem;
+  font-style: oblique;
+}
 /*# sourceMappingURL=style.css.map */
