--- a/style/style.scss
+++ b/style/style.scss
@@ -14,4 +14,9 @@ section.test{
     color: darkmagenta;
     font-size: 1.5rem;
   }
+  p.c{
+    color: darkorange;
+    font-size: 1.5rem;  
+    font-style: oblique;
+  }
 }
